--- a/Naudinga informacija.html
+++ b/Naudinga informacija.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qxnwteHydX" once="menu" id="menu2-15" data-rv-view="102">
+<section class="menu cid-qxnwteHydX" once="menu" id="menu2-15" data-rv-view="79">
 
     
 
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="cid-qxnBio8U2J" id="footer1-1i" data-rv-view="104">
+<section class="engine"><a href="https://mobirise.co/h">how to make your own website for free</a></section><section class="cid-qxnBio8U2J" id="footer1-1i" data-rv-view="81">
 
     
 
