--- a/Naujienos.html
+++ b/Naujienos.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qxnwpJzyOn" once="menu" id="menu2-13" data-rv-view="92">
+<section class="menu cid-qxnwpJzyOn" once="menu" id="menu2-13" data-rv-view="69">
 
     
 
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="cid-qxnBci8Pkx" id="footer1-1g" data-rv-view="94">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="cid-qxnBci8Pkx" id="footer1-1g" data-rv-view="71">
 
     
 
